APPBUG-4135, Alignment Issue for Social Login "Create Account & Sign In" Screen
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@39651 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/global/help.css
+++ b/projects/Media/docroot/assets/css/global/help.css
@@ -121,6 +121,6 @@
 
 .error {
 	color: #cc0000;
-	margin-left: 165px;
+	/*margin-left: 165px;*/
 }
 
